# gen-captions

./: .env  .env.aider  .env.sample  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GIT_FILTER_REPO_ANALYSIS.md  LICENSE  Makefile  README.md  ROADMAP.md  gen-captions.code-workspace  gen-captions.py  gen_captions.spec  gen_changelog.sh  pants.toml  pyproject.toml  pyproject.toml.txt  requirements.txt  run_aider.py  run_tests.cmd  run_tests.sh  setup_env.cmd  setup_env.sh
.claude/: settings.local.json
gen_captions/: BUILD  __init__.py  __main__.py  cli.py  config.py  config_manager.py  config_schema.py  constants.py  dedupe.py  default.yaml  duplicate_detector.py  encoding_fixer.py  file_operations.py  image_processor.py  llm_client.py  local.yaml  logger_config.py  openai_api.py  openai_generic_client.py  quality_scorer.py  removal_processor.py  system_info.py  utils.py
requirements/: BUILD  requirements-dev.txt  requirements-test.txt  requirements.txt
tests/: BUILD  __init__.py  test_cli.py  test_constants.py  test_encoding_fixer.py  test_image_processor.py  test_openai_api.py  test_utils.py
tests/e2e/: BUILD  test_e2e_stub.py
tests/features/: BUILD  generate_captions.feature
tests/features/steps/: BUILD  steps_fix_encoding.py  steps_gen_env.py  steps_generate_captions.py
tests/integration/: BUILD  test_integration_stub.py
tests/unit/: BUILD  test_cli.py  test_config.py  test_config_manager.py  test_encoding_fixer.py  test_image_processor.py  test_openai_api.py  test_removal_processor.py  test_server_detection.py  test_utils.py
