
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "gen_captions/__version__.py"

[tool.black]
line-length = 88
target-version = ['py311', 'py312']

[tool.hatch.build]
include = [
  "gen_captions/**",
  "tests/**",
  "pyproject.toml",
  "README.md",
  "LICENSE",
  "CONTRIBUTING.md",
  "CHANGELOG.md"
]

[tool.isort]
profile = "black"

[project]
name = "gen-captions"
dynamic = ["version"]
description = "Gen-Captions Image caption generation tool"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [{ name = "AeyeOps", email = "support@aeyeops.com" }]
dependencies = [
    "openai",
    "python-dotenv",
    "requests",
    "pytest",
    "black",
    "isort"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12"
]

[project.scripts]
gen_captions = "gen_captions.cli:main"

[project.urls]
Homepage = "https://github.com/steveant/gen-captions"
Issues = "https://github.com/steveant/gen-captions/issues"
Documentation = "https://github.com/steveant/gen-captions/tree/main/README.md"

